--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -28,7 +30,7 @@
   border-radius: 50%;
   overflow: hidden;
   transition: 2s;
-  transform: rotate(calc(360deg / 9 * var(--i)));
+  transform: rotate(calc(360deg / 12 * var(--i)));
   transform-origin: 340px;
 }
 
@@ -39,4 +41,33 @@
   width: 120%;
   height: 120%;
   object-fit: cover;
+}
+
+.me img {
+  position: absolute;
+  top: -10px;
+  left: 0;
+  width: 120%;
+  height: 120%;
+  object-fit: cover;
+}
+
+.move {
+  animation: fadein 5s linear;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+h1,
+h2,
+li,
+p {
+  font-family: "Poppins", sans-serif;
 }
