--- a/src/index.css
+++ b/src/index.css
@@ -34,6 +34,10 @@
   transform-origin: 340px;
 }
 
+.active {
+  color: rgb(75, 72, 72);
+}
+
 .container .icon .imgBx img {
   position: absolute;
   top: -10px;
